--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
             <activity android:name=".ui.phone.ScreenOnFlagActivity" />
             <activity android:name=".ui.phone.ScreenOnXmlActivity" />
             <activity android:name=".ui.phone.ScreenOnWakeLockActivity" />
+            <uses-permission android:name="android.permission.VIBRATE"/>
         </activity>
     </application>
 
