--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.keir.keirsasteroids" >
-    <uses-permission android:name="android.permission.VIBRATE"/>
+
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name=".MainActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,11 +21,15 @@
         </activity>
         <activity
             android:name=".GameActivity"
-            android:screenOrientation="portrait"
-            android:label="@string/title_activity_game">
+            android:label="@string/title_activity_game"
+            android:screenOrientation="portrait" >
             <activity android:name=".ui.phone.ScreenOnFlagActivity" />
             <activity android:name=".ui.phone.ScreenOnXmlActivity" />
             <activity android:name=".ui.phone.ScreenOnWakeLockActivity" />
+        </activity>
+        <activity
+            android:name=".GameOver"
+            android:label="@string/title_activity_game_over" >
         </activity>
     </application>
 
